--- a/web/bundles/css/styles.scss
+++ b/web/bundles/css/styles.scss
@@ -5,7 +5,8 @@
 ---------------------*/
 
 *{
-  font-family: $medium;
+  font-family: $work;
+  font-weight: $regular;
 }
 
 body{
@@ -44,7 +45,6 @@ body{
     text-align: center;
     text-decoration: none;
     transition: ease-in-out 0.3s;
-    width: 200px;
     &:hover{
         background-color: transparent;
         border: 2px solid $first_color;
@@ -299,7 +299,6 @@ body{
   z-index: 11;
   .title{
     font-size: 16px;
-    font-family: $black;
     letter-spacing: 5px;
     margin: 0;
     margin-top: 25px;
@@ -311,6 +310,7 @@ body{
     }
     a{
       color: white;
+      font-family: $black;
       text-decoration: none;
     }
   }
@@ -370,6 +370,7 @@ body{
       color: white;
       line-height: 80px;
       float: right;
+      font-family: $medium;
       margin: 0;
       margin-right: 5px;
       text-transform: uppercase;
@@ -411,6 +412,7 @@ body{
         margin-right: 20px;
         span{
           color: $third_color;
+          font-family: $medium;
           text-transform: uppercase;
           letter-spacing: 3px;
         }
@@ -425,6 +427,7 @@ body{
       .btn_modification{
         float: left;
         margin-right: 20px;
+        padding: 0 20px;
       }
       &:after{
         clear: both;
@@ -433,23 +436,30 @@ body{
       }
     }
     .form{
-      .form_champ{
-        div{
+        .champ{
           position: relative;
           float: left;
           width: 50%;
           margin-top: 20px;
-          &:first-child{
-            background-color: transparent;
-            border: 2px solid $first_color;
-            height: 60px;
-            margin-bottom: 30px;
-            margin-left: 25px;
-            width: 95%;
-            label{
-              display: none;
-            }
+        }
+        .picture{
+          background-color: transparent;
+          border: 2px solid $first_color;
+          height: 60px;
+          margin-bottom: 30px;
+          margin-left: 25px;
+          position: relative;
+          width: 95%;
+          span{
+            color: white;
+            line-height: 60px;
+            padding-left: 30px;
           }
+        }
+        .btn_submit{
+          float: left;
+          margin-top: 0px;
+          margin-left: 100px;
         }
         input[type=email]{
           background: transparent;
@@ -522,8 +532,6 @@ body{
           left: 25px;
           bottom: 90px;
         }
-
-      }
     }
     &:after{
       clear: both;
