--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
@@ -1,8 +1,37 @@
+{% extends '::base.html.twig' %}
+{% block body %}
+
 {% trans_default_domain 'FOSUserBundle' %}
 
-{{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'fos_user_change_password' } }) }}
-    {{ form_widget(form) }}
-    <div>
-        <input type="submit" value="{{ 'change_password.submit'|trans }}" />
-    </div>
-{{ form_end(form) }}
+
+{% include 'header.html.twig' %}
+
+
+<section>
+  {% include 'aside.html.twig' %}
+  <div class="container">
+    <section class="contenue--profile">
+      <article class="show--profile">
+        <h3 class="title--profile">Modifier votre Mot de passe</h3>
+        {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'form' } }) }}
+        <div class="champ">
+          {{form_label(form.curreent_password)}}
+          {{ form_errors(form.curreent_password) }}
+          {{ form_widget(form.curreent_password) }}
+        </div>
+            <div>
+                <input class="btn_modification" type="submit" value="{{ 'change_password.submit'|trans }}" />
+            </div>
+        {{ form_end(form) }}
+      </article>
+    </section>
+
+  </div>
+
+</section>
+
+
+
+
+
+{% endblock %}
