--- a/web/bundles/css/styles.scss
+++ b/web/bundles/css/styles.scss
@@ -433,23 +433,13 @@ body{
       }
     }
     .form{
+      text-align: center;
       .form_champ{
         div{
           position: relative;
           float: left;
           width: 50%;
           margin-top: 20px;
-          &:first-child{
-            background-color: transparent;
-            border: 2px solid $first_color;
-            height: 60px;
-            margin-bottom: 30px;
-            margin-left: 25px;
-            width: 95%;
-            label{
-              display: none;
-            }
-          }
         }
         input[type=email]{
           background: transparent;
@@ -504,25 +494,12 @@ body{
           width: 90%;
 
         }
-        input[type=file]{
-          position: absolute;
-          top: 0;
-          right: 0;
-          left: 0;
-          bottom: 0;
-          width: 100%;
-          margin: 0;
-          padding: 0;
-          cursor: pointer;
-          opacity: 0;
-        }
         label{
           color: white;
           position: absolute;
           left: 25px;
           bottom: 90px;
         }
-
       }
     }
     &:after{
