--- a/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/edit_content.html.twig
@@ -5,47 +5,39 @@
 
 
 
-<header class=" container header">
-  <section class="header--user">
-    <a href="{{path('fos_user_security_logout')}}" class="disconect--user"><i class="material-icons">power_settings_new</i></a>
-    <p class="text--user">{{ user.username }}</p>
-    <p class="text--user">{{ user.firstname}}</p>
-    <div class="img--user">
-      <img src="{{ asset('bundles/images/img.jpg') }}" alt="img-profil">
-    </div>
-  </section>
-</header>
+{% include 'header.html.twig' %}
 
 <section>
 
-  <aside class="aside-left">
-    <div class="header-aside">
-        <h1 class="title"><img src="{{asset('bundles/images/logo.png')}}" alt="image_logo" class="logo"><a href="{{ path('index') }}">Workplace</a></h1>
-    </div>
-    <article class="sidebar">
-        <nav class="menu_aside">
-            <ul>
-                <li><a class="active" href="{{path('fos_user_profile_show')}}"><i class="material-icons">face</i>Profil</a></li>
-                <li><a href="#!"><i class="material-icons">group</i>Clients</a></li>
-                <li><a href="#!"><i class="material-icons">folder</i>Projets</a></li>
-                <li><a href="#!"><i class="material-icons">insert_drive_file</i>Factures et devis</a></li>
-                <li><a href="#!"><i class="material-icons">pie_chart</i>Graphique</a></li>
-            </ul>
-        </nav>
-    </article>
-  </aside>
+  {% include 'aside.html.twig' %}
 
   <div class="container">
     <section class="contenue--profile">
       <article class="show--profile">
         <h3 class="title--profile">Modifier votre Profil</h3>
-        {{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'form' } }) }}
+      <!--{{ form_start(form, { 'action': path('fos_user_profile_edit'), 'attr': { 'class': 'form' } }) }}
             {{ form_widget(form, { 'attr': {'class': 'form_champ' }}) }}
-              <div class="">
+              <div class="btn_submit">
                 <input class="btn_modification" type="submit" value="{{ 'profile.edit.submit'|trans }}" />
               </div>
 
-        {{ form_end(form) }}
+        {{ form_end(form) }}-->
+
+
+        <form action="{{ path("fos_user_profile_edit") }}" method="post" class="form">
+            {% if csrf_token %}
+                <input type="hidden" name="_csrf_token" value="{{ s }}" />
+            {% endif %}
+
+
+            <input type="text" id="username" name="_username" required="required" class="champ_form" placeholder="{{ 'security.login.username'|trans }}"/>
+            <input type="password" id="password" name="_password" required="required" class="champ_form" placeholder="{{ 'security.login.password'|trans }}"/>
+
+            <input type="checkbox" id="remember_me" name="_remember_me" value="on" />
+            <label class="remember" for="remember_me">{{ 'security.login.remember_me'|trans }}</label>
+
+            <input type="submit" class="btn_connection" id="_submit" name="_submit" value="{{ 'security.login.submit'|trans }}" />
+        </form>
       </article>
     </section>
 
