commit change password

--- a/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/ChangePassword/change_password_content.html.twig
@@ -15,7 +15,14 @@
         <h3 class="title--profile">Modifier votre Mot de passe</h3>
         {{ form_start(form, { 'action': path('fos_user_change_password'), 'attr': { 'class': 'form' } }) }}
         <div class="champ">
-          
+          {{form_label(form.current_password)}}
+          {{ form_errors(form.current_password) }}
+          {{ form_widget(form.current_password) }}
+        </div>
+
+        <div class="champ">
+          {{ form_errors(form.plainPassword) }}
+          {{ form_widget(form.plainPassword) }}
         </div>
             <div>
                 <input class="btn_modification" type="submit" value="{{ 'change_password.submit'|trans }}" />
