--- a/web/bundles/css/styles.css
+++ b/web/bundles/css/styles.css
@@ -498,6 +498,11 @@ body {
   margin-top: 20px;
 }
 
+.contenue--profile .show--profile .form .champ label {
+  color: white;
+  padding-left: 25px;
+}
+
 .contenue--profile .show--profile .form .picture {
   background-color: transparent;
   border: 2px solid #1072EA;
@@ -587,13 +592,6 @@ body {
   padding: 0;
   cursor: pointer;
   opacity: 0;
-}
-
-.contenue--profile .show--profile .form label {
-  color: white;
-  position: absolute;
-  left: 25px;
-  bottom: 90px;
 }
 
 .contenue--profile .show--profile:after {
