--- a/app/Resources/views/aside.html.twig
+++ b/app/Resources/views/aside.html.twig
@@ -1,6 +1,6 @@
 <aside class="aside-left">
   <div class="header-aside">
-      <h1 class="title"><img src="{{asset('bundles/images/logo.png')}}" alt="image_logo" class="logo"><a href="{{ path('index') }}">Workplace</a></h1>
+      <h1 class="title"><img src="{{asset('bundles/images/logo.png')}}" alt="image_logo" class="logo"><a href="{{ path('fos_user_profile_show') }}">Workplace</a></h1>
   </div>
   <article class="sidebar">
       <nav class="menu_aside">
