--- a/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Profile/show_content.html.twig
@@ -11,15 +11,15 @@
         <article class="show--profile">
             <h3 class="title--profile">Votre Profil</h3>
             <div class="content__text">
-              <p class="text--profile">{{ 'profile.show.username'|trans }} : <span>{{ user.username }}</span></p>
-              <p class="text--profile">Prénom : <span>{{ user.firstname}}</span></p>
-              <p class="text--profile">{{ 'profile.show.email'|trans }} : <span>{{ user.email }}</span></p>
-              <p class="text--profile">Date de naissance : <span>{{ user.birthday}}</span></p>
-              <p class="text--profile">Numéro de téléphone : <span>{{ user.tel}}</span></p>
-              <p class="text--profile">Adresse : <span>{{ user.adresse}}</span></p>
-              <p class="text--profile">Ville : <span>{{ user.town}}</span></p>
-              <p class="text--profile">Code postale : <span>{{ user.cp}}</span></p>
-              <p class="text--profile">Pays : <span>{{ user.country}}</span></p>
+              <p class="text--profile">{{ 'profile.show.username'|trans }} : <span>{{ app.user.username }}</span></p>
+              <p class="text--profile">Prénom : <span>{{ app.user.firstname}}</span></p>
+              <p class="text--profile">{{ 'profile.show.email'|trans }} : <span>{{ app.user.email }}</span></p>
+              <p class="text--profile">Date de naissance : <span>{{ app.user.birthday}}</span></p>
+              <p class="text--profile">Numéro de téléphone : <span>{{ app.user.tel}}</span></p>
+              <p class="text--profile">Adresse : <span>{{ app.user.adresse}}</span></p>
+              <p class="text--profile">Ville : <span>{{ app.user.town}}</span></p>
+              <p class="text--profile">Code postale : <span>{{ app.user.cp}}</span></p>
+              <p class="text--profile">Pays : <span>{{ app.user.country}}</span></p>
             </div>
             <div class="content__btn">
               <a class="btn_modification" href="{{path('fos_user_profile_edit')}}">Modifier votre profil</a>
