--- a/app/Resources/views/aside.html.twig
+++ b/app/Resources/views/aside.html.twig
@@ -5,7 +5,8 @@
   <article class="sidebar">
       <nav class="menu_aside">
           <ul>
-              <li><a class="active" href="{{path('fos_user_profile_show')}}"><i class="material-icons">face</i>Profil</a></li>
+              <li><a class="active" href="#!"><i class="material-icons">dashboard</i>Dashboard</a></li>
+              <li><a href="{{path('fos_user_profile_show')}}"><i class="material-icons">face</i>Profil</a></li>
               <li><a href="#!"><i class="material-icons">group</i>Clients</a></li>
               <li><a href="#!"><i class="material-icons">folder</i>Projets</a></li>
               <li><a href="#!"><i class="material-icons">insert_drive_file</i>Factures et devis</a></li>
