--- a/web/bundles/css/styles.css
+++ b/web/bundles/css/styles.css
@@ -600,6 +600,38 @@ body {
   content: '';
 }
 
+.contenue--profile .show--picture {
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: 8px 3px 15px 0px rgba(0, 0, 0, 0.3);
+  margin-top: 10px;
+  margin-right: 50px;
+  margin-bottom: 20px;
+  padding: 20px 0 20px 20px;
+  width: 50%;
+}
+
+.contenue--profile .show--picture .title--profile {
+  color: #f39468;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  font-size: 24px;
+  font-family: "brandon_grotesqueblack";
+}
+
+.contenue--profile .show--picture .images {
+  margin: 0 auto;
+  height: 300px;
+  object-fit: cover;
+  width: 300px;
+}
+
+.contenue--profile .show--picture .images img {
+  background-color: white;
+  border-radius: 100%;
+  height: 100%;
+  width: 100%;
+}
+
 .contenue--profile .show--project {
   background-color: rgba(0, 0, 0, 0.3);
   box-shadow: 8px 3px 15px 0px rgba(0, 0, 0, 0.3);
