--- a/web/bundles/css/styles.scss
+++ b/web/bundles/css/styles.scss
@@ -538,6 +538,34 @@ body{
       content: '';
     }
   }
+  .show--picture{
+    background-color: rgba(black, 0.3);
+    box-shadow: 8px 3px 15px 0px rgba(black, 0.3);
+    margin-top: 10px;
+    margin-right: 50px;
+    margin-bottom: 20px;
+    padding: 20px 0 20px 20px;
+    width: 50%;
+    .title--profile{
+      color: $third_color;
+      letter-spacing: 10px;
+      text-transform: uppercase;
+      font-size: 24px;
+      font-family: $black;
+    }
+    .images{
+      margin: 0 auto;
+      height: 300px;
+      object-fit: cover;
+      width: 300px;
+      img{
+        background-color: white;
+        border-radius: 100%;
+        height: 100%;
+        width: 100%;
+      }
+    }
+  }
   .show--project{
     background-color: rgba(black, 0.3);
     box-shadow: 8px 3px 15px 0px rgba(black, 0.3);
