--- a/src/MG/GestionBundle/Resources/views/Client/client.html.twig
+++ b/src/MG/GestionBundle/Resources/views/Client/client.html.twig
@@ -8,8 +8,9 @@
     <div class="container">
       <section class="contenue--client">
         <article class="show--client">
+          <h3 class="title--client">Mes Clients</h3>
           {% for client in clients %}
-            <p class="text--client">{{client.nom}}</p>
+            <p class="text--client">{{client.nom}} {{client.prenom}}</p>
           {% endfor %}
         </article>
       </section>
