--- a/app/Resources/views/clients/index.html.twig
+++ b/app/Resources/views/clients/index.html.twig
@@ -7,53 +7,39 @@
 <section>
   {% include 'aside.html.twig' %}
   <div class="container">
-      <h1>Clients list</h1>
+    <section class="contenue--client">
+      <article class="show--client">
+        <h3 class="title--client">Mes clients</h3>
 
-      <table>
-          <thead>
-              <tr>
-                  <th>Id</th>
-                  <th>Nom</th>
-                  <th>Prenom</th>
-                  <th>Mail</th>
-                  <th>Adresse</th>
-                  <th>Ville</th>
-                  <th>Codepostal</th>
-                  <th>Tel</th>
-                  <th>Actions</th>
-              </tr>
-          </thead>
-          <tbody>
-          {% for client in clients %}
-              <tr>
-                  <td><a href="{{ path('clients_show', { 'id': client.id }) }}">{{ client.id }}</a></td>
-                  <td>{{ client.nom }}</td>
-                  <td>{{ client.prenom }}</td>
-                  <td>{{ client.mail }}</td>
-                  <td>{{ client.adresse }}</td>
-                  <td>{{ client.ville }}</td>
-                  <td>{{ client.codePostal }}</td>
-                  <td>{{ client.tel }}</td>
-                  <td>
-                      <ul>
-                          <li>
-                              <a href="{{ path('clients_show', { 'id': client.id }) }}">show</a>
-                          </li>
-                          <li>
-                              <a href="{{ path('clients_edit', { 'id': client.id }) }}">edit</a>
-                          </li>
-                      </ul>
-                  </td>
-              </tr>
-          {% endfor %}
-          </tbody>
-      </table>
+        <table>
+            <tbody>
+            {% for client in clients %}
+                <tr>
+                    <td class="text--client"><i class="material-icons">person</i>{{ client.nom }} {{ client.prenom }}</td>
+                    <td class="text--client"><i class="material-icons">check_box_outline_blank</i>Projets à faire {{ client.startProjects|length }}</td>
+                    <td class="text--client"><i class="material-icons">indeterminate_check_box</i>Projets en cour {{ client.ongoingProjects|length }}</td>
+                    <td class="text--client"><i class="material-icons">check_box</i>Projets terminé {{ client.finishedProjects|length }}</td>
+                    <td>
+                        <ul>
+                            <li>
+                                <a class="btn__supp" href="{{ path('clients_show', { 'id': client.id }) }}">Consulter la fiche</a>
 
-      <ul>
-          <li>
-              <a href="{{ path('clients_new') }}">Create a new client</a>
-          </li>
-      </ul>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+
+        <ul>
+            <li>
+                <a class="btn_modification" href="{{ path('clients_new') }}">Ajouter un client</a>
+            </li>
+        </ul>
+      </article>
+    </section>
+
   </div>
 </section>
 
