--- a/app/Resources/views/clients/edit.html.twig
+++ b/app/Resources/views/clients/edit.html.twig
@@ -1,6 +1,12 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
+{% trans_default_domain 'FOSUserBundle' %}
+{% include 'header.html.twig' %}
+
+<section>
+  {% include 'aside.html.twig' %}
+  <div class="container">
     <h1>Client edit</h1>
 
     {{ form_start(edit_form) }}
@@ -18,4 +24,8 @@
             {{ form_end(delete_form) }}
         </li>
     </ul>
+  </div>
+</section>
+
+
 {% endblock %}
