--- a/app/Resources/views/clients/edit.html.twig
+++ b/app/Resources/views/clients/edit.html.twig
@@ -7,23 +7,24 @@
 <section>
   {% include 'aside.html.twig' %}
   <div class="container">
-    <h1>Client edit</h1>
+    <section class="contenue--client">
+      <article class="show--client">
+        <h3 class="title--client">Modification du client</h3>
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input type="submit" value="Edit" />
-    {{ form_end(edit_form) }}
+        {{ form_start(edit_form, {'attr': {'class': 'form--client'}}) }}
+            {{ form_widget(edit_form, {'attr': {'class': 'champ--client'}}) }}
+            <br>
+            <input class="btn__edit" type="submit" value="Modifier" />
+        {{ form_end(edit_form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('clients_index') }}">Back to the list</a>
-        </li>
-        <li>
-            {{ form_start(delete_form) }}
-                <input type="submit" value="Delete">
-            {{ form_end(delete_form) }}
-        </li>
-    </ul>
+        <ul>
+            <li>
+                <a class="btn_modification" href="{{ path('clients_index') }}">Retour aux clients</a>
+            </li>
+        </ul>
+      </article>
+    </section>
+
   </div>
 </section>
 
