--- a/web/bundles/css/styles.scss
+++ b/web/bundles/css/styles.scss
@@ -47,6 +47,45 @@ body{
         border: 2px solid $first_color;
     }
 }
+.btn__edit{
+  background-color: $success;
+  border-radius: 100px;
+  border: 1px solid transparent;
+  color: white;
+  cursor: pointer;
+  display: block;
+  font-size: 14px;
+  height: 50px;
+  padding: 0 20px;
+  line-height: 50px;
+  text-decoration: none;
+  transition: ease-in-out 0.3s;
+  &:hover{
+    background-color: transparent;
+    border: 1px solid $success;
+  }
+}
+.btn__supp{
+  background-color: $third_color;
+  border-radius: 100px;
+  border: 1px solid transparent;
+  color: white;
+  cursor: pointer;
+  display: block;
+  font-size: 14px;
+  height: 50px;
+  padding: 0 20px;
+  line-height: 50px;
+  text-decoration: none;
+  transition: ease-in-out 0.3s;
+  &:hover{
+    background-color: transparent;
+    border: 1px solid $third_color;
+  }
+}
+
+
+
 
 .flash-success{
   color: $success;
@@ -616,43 +655,53 @@ body{
       li{
         list-style: none;
         display:inline-block;
-        .btn__supp{
-          background-color: $third_color;
-          border-radius: 100px;
-          border: 1px solid transparent;
-          color: white;
-          cursor: pointer;
-          display: block;
-          font-size: 14px;
-          height: 50px;
-          padding: 0 20px;
-          line-height: 50px;
-          text-decoration: none;
-          transition: ease-in-out 0.3s;
-          &:hover{
-            background-color: transparent;
-            border: 1px solid $third_color;
-          }
-        }
-        .btn__edit{
-          background-color: $success;
-          border-radius: 100px;
-          border: 1px solid transparent;
-          color: white;
-          display: block;
-          font-size: 14px;
-          height: 50px;
-          padding: 0 20px;
-          line-height: 50px;
-          text-decoration: none;
-          transition: ease-in-out 0.3s;
-          &:hover{
-            background-color: transparent;
-            border: 1px solid $success;
-          }
-        }
       }
     }
-
+    .form--client{
+      .champ--client{
+        position: relative;
+        float: left;
+        width: 100%;
+        margin-top: 20px;
+        label{
+          color: white;
+          padding-left: 5px;
+        }
+        div{
+          float: left;
+        }
+        input[type=text]{
+          background: transparent;
+          border: 1px solid $first_color;
+          color: $first_color;
+          display: block;
+          font-size: 16px;
+          height: 50px;
+          margin: 0 auto;
+          margin-bottom: 35px;
+          outline: none;
+          padding-left: 15px;
+          width: 90%;
+        }
+        input[type=number]{
+          background: transparent;
+          border: 1px solid $first_color;
+          color: $first_color;
+          display: block;
+          font-size: 16px;
+          height: 50px;
+          margin: 0 auto;
+          margin-bottom: 35px;
+          outline: none;
+          padding-left: 15px;
+          width: 90%;
+        }
+      }
+      &:after{
+        clear: both;
+        display: table;
+        content: '';
+      }
+    }
   }
 }
