--- a/app/Resources/views/clients/new.html.twig
+++ b/app/Resources/views/clients/new.html.twig
@@ -1,16 +1,29 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <h1>Client creation</h1>
+{% trans_default_domain 'FOSUserBundle' %}
+{% include 'header.html.twig' %}
+<section>
+  {% include 'aside.html.twig' %}
+  <div class="container">
+    <section class="contenue--client">
+      <article class="show--client">
+        <h3 class="title--client">Ajout d'un client</h3>
 
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Create" />
-    {{ form_end(form) }}
+        {{ form_start(form, {'attr': {'class': 'form--client'}}) }}
+            {{ form_widget(form, {'attr': {'class': 'champ--client'}}) }}
+            <br>
+            <input class="btn__edit" type="submit" value="Ajouter" />
+        {{ form_end(form) }}
 
-    <ul>
-        <li>
-            <a href="{{ path('clients_index') }}">Back to the list</a>
-        </li>
-    </ul>
+        <ul>
+            <li>
+                <a class="btn_modification" href="{{ path('clients_index') }}">Retour aux clients</a>
+            </li>
+        </ul>
+      </article>
+    </section>
+  </div>
+</section>
+
 {% endblock %}
