--- a/web/bundles/css/styles.css
+++ b/web/bundles/css/styles.css
@@ -786,3 +786,44 @@ body {
   display: table;
   content: '';
 }
+
+.contenue--client .show--projet {
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: 8px 3px 15px 0px rgba(0, 0, 0, 0.3);
+  margin-top: 50px;
+  margin-right: 50px;
+  padding: 20px 0 20px 20px;
+  position: relative;
+  width: 98%;
+}
+
+.contenue--client .show--projet .title--projet {
+  color: #f39468;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-family: "brandon_grotesqueblack";
+  margin: 0px 0 50px 0;
+}
+
+.contenue--client .show--projet .title--projet .material-icons {
+  font-size: 35px;
+  vertical-align: -10px;
+  margin-right: 10px;
+}
+
+.contenue--client .show--projet .text--projet {
+  color: white;
+  font-size: 14px;
+  padding: 0 20px 0 0;
+}
+
+.contenue--client .show--projet .text--projet .material-icons {
+  vertical-align: -5px;
+}
+
+.contenue--client .show--projet .td--projet {
+  position: absolute;
+  right: 40px;
+  bottom: 15px;
+}
