--- a/web/bundles/css/styles.css
+++ b/web/bundles/css/styles.css
@@ -827,3 +827,38 @@ body {
   right: 40px;
   bottom: 15px;
 }
+
+.contenue--dashboard {
+  margin-left: 2%;
+}
+
+.contenue--dashboard .show--dashboard {
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: 8px 3px 15px 0px rgba(0, 0, 0, 0.3);
+  margin-top: 50px;
+  margin-right: 50px;
+  padding: 20px 0 20px 20px;
+  width: 98%;
+}
+
+.contenue--dashboard .show--dashboard .main-text-dashboard {
+  color: white;
+  font-size: 24px;
+}
+
+.contenue--dashboard .show--dashboard .main-text-dashboard span {
+  color: #1072EA;
+}
+
+.contenue--dashboard .show--dashboard .text--dashboard {
+  color: white;
+}
+
+.contenue--dashboard .show--dashboard .title--dashboard {
+  color: #f39468;
+  letter-spacing: 10px;
+  text-transform: uppercase;
+  font-size: 18px;
+  font-family: "brandon_grotesqueblack";
+  margin: 0px 0 50px 0;
+}
