--- a/web/bundles/css/styles.css
+++ b/web/bundles/css/styles.css
@@ -790,7 +790,7 @@ body {
 .contenue--client .show--projet {
   background-color: rgba(0, 0, 0, 0.3);
   box-shadow: 8px 3px 15px 0px rgba(0, 0, 0, 0.3);
-  margin-top: 50px;
+  margin-top: 10px;
   margin-right: 50px;
   padding: 20px 0 20px 20px;
   position: relative;
@@ -815,24 +815,22 @@ body {
 .contenue--client .show--projet .text--projet {
   color: white;
   font-size: 14px;
-  padding: 0 20px 0 0;
 }
 
 .contenue--client .show--projet .text--projet .material-icons {
   vertical-align: -5px;
 }
 
-.contenue--client .show--projet .td--projet {
-  position: absolute;
-  right: 40px;
-  bottom: 15px;
+.contenue--client .show--projet tr td {
+  padding-right: 200px;
+  padding-bottom: 50px;
 }
 
 .contenue--dashboard {
   margin-left: 2%;
 }
 
-.contenue--dashboard .show--dashboard {
+.contenue--dashboard .show--desc {
   background-color: rgba(0, 0, 0, 0.3);
   box-shadow: 8px 3px 15px 0px rgba(0, 0, 0, 0.3);
   margin-top: 50px;
@@ -841,17 +839,49 @@ body {
   width: 98%;
 }
 
-.contenue--dashboard .show--dashboard .main-text-dashboard {
+.contenue--dashboard .show--desc .main-text-dashboard {
   color: white;
   font-size: 24px;
 }
 
-.contenue--dashboard .show--dashboard .main-text-dashboard span {
+.contenue--dashboard .show--desc .main-text-dashboard span {
   color: #1072EA;
+}
+
+.contenue--dashboard .show--desc .text--dashboard {
+  color: white;
+}
+
+.contenue--dashboard .show--desc .text--dashboard .material-icons {
+  vertical-align: -5px;
+}
+
+.contenue--dashboard .show--dashboard {
+  background-color: rgba(0, 0, 0, 0.3);
+  box-shadow: 8px 3px 15px 0px rgba(0, 0, 0, 0.3);
+  margin-top: 10px;
+  margin-right: 50px;
+  padding: 20px 0 20px 20px;
+  width: 98%;
 }
 
 .contenue--dashboard .show--dashboard .text--dashboard {
   color: white;
+  padding: 0 20px 40px 0;
+}
+
+.contenue--dashboard .show--dashboard .text--dashboard .material-icons {
+  vertical-align: -5px;
+}
+
+.contenue--dashboard .show--dashboard ul {
+  padding: 0 0 40px 0;
+  margin: 0px;
+}
+
+.contenue--dashboard .show--dashboard ul li {
+  list-style: none;
+  display: inline-block;
 }
 
 .contenue--dashboard .show--dashboard .title--dashboard {
