--- a/app/Resources/views/clients/show.html.twig
+++ b/app/Resources/views/clients/show.html.twig
@@ -40,7 +40,7 @@
               {% for projet in client.startProjects %}
                 <tr>
                 <td class="text--projet"><i class="material-icons">folder_open</i> {{ projet.nom }}</td>
-                <td class="td--projet"><a href="{{ path('projet_show', { 'id': projet.id })}}">Consulter le projet</a></td>
+                <td class="td--projet"><a class="btn__supp" href="{{ path('projet_show', { 'id': projet.id })}}">Consulter le projet</a></td>
                 </tr>
               {% endfor %}
           </tbody>
