--- a/src/MG/GestionBundle/Resources/views/projet/index.html.twig
+++ b/src/MG/GestionBundle/Resources/views/projet/index.html.twig
@@ -8,48 +8,58 @@
     <section>
         {% include 'aside.html.twig' %}
         <div class="container">
+            <section class="contenue--client">
+                <article class="show--projet">
+                    <h3 class="title--project">Mes Projets</h3>
+                    <ul>
+                        <li>
+                            <a class="btn__update" href="{{ path('projet_new') }}">Ajouter un projet</a>
+                        </li>
+                    </ul>
+                </article>
 
-            <h1>Projets list</h1>
+                <article class="show--projet">
+                    <h4 class="title--projet"><i class="material-icons">check_box_outline_blank</i>Projet à faire</h4>
+                    <table>
+                        <tbody>
+                        {% for projet in projets_satrt %}
+                            <tr>
+                                <td class="text--projet"><i class="material-icons">folder_open</i> {{ projet.nom }}</td>
+                                <td class="td--projet"><a class="btn__supp" href="{{ path('projet_show', { 'id': projet.id })}}">Consulter le projet</a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </article>
 
-            <table>
-                <thead>
-                    <tr>
-                        <th>Id</th>
-                        <th>Nom</th>
-                        <th>Avancement</th>
-                        <th>Created</th>
-                        <th>Updated</th>
-                        <th>Actions</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    {% for projet in projets %}
-                        <tr>
-                            <td><a href="{{ path('projet_show', { 'id': projet.id }) }}">{{ projet.id }}</a></td>
-                            <td>{{ projet.nom }}</td>
-                            <td>{% if projet.avancement %}Yes{% else %}No{% endif %}</td>
-                            <td>{% if projet.created %}{{ projet.created|date('Y-m-d H:i:s') }}{% endif %}</td>
-                            <td>{% if projet.updated %}{{ projet.updated|date('Y-m-d H:i:s') }}{% endif %}</td>
-                            <td>
-                                <ul>
-                                    <li>
-                                        <a href="{{ path('projet_show', { 'id': projet.id }) }}">show</a>
-                                    </li>
-                                    <li>
-                                        <a href="{{ path('projet_edit', { 'id': projet.id }) }}">edit</a>
-                                    </li>
-                                </ul>
-                            </td>
-                        </tr>
-                    {% endfor %}
-                </tbody>
-            </table>
+                <article class="show--projet">
+                    <h4 class="title--projet"><i class="material-icons">indeterminate_check_box</i>Projet en cours</h4>
+                    <table>
+                        <tbody>
+                        {% for projet in projets_going %}
+                            <tr>
+                                <td class="text--projet"><i class="material-icons">folder_open</i> {{ projet.nom }}</td>
+                                <td class="td--projet"><a class="btn__supp" href="{{ path('projet_show', { 'id': projet.id })}}">Consulter le projet</a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </article>
 
-            <ul>
-                <li>
-                    <a href="{{ path('projet_new') }}">Create a new projet</a>
-                </li>
-            </ul>
+                <article class="show--projet">
+                    <h4 class="title--projet"><i class="material-icons">check_box</i>Projet terminé</h4>
+                    <table>
+                        <tbody>
+                        {% for projet in projets_finished %}
+                            <tr>
+                                <td class="text--projet"><i class="material-icons">folder_open</i> {{ projet.nom }}</td>
+                                <td class="td--projet"><a class="btn__supp" href="{{ path('projet_show', { 'id': projet.id })}}">Consulter le projet</a></td>
+                            </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
+                </article>
+            </section>
 
         </div>
     </section>
